--- a/web_flask/templates/dashboard.html
+++ b/web_flask/templates/dashboard.html
@@ -95,7 +95,7 @@
 			<div class="col-sm-7">
 				<div class="card">
 					<div class="card-body">
-						<div class="user_survey_statistic">
+						<div class="user_survey_statistic" style="height: 388px">
 							<canvas id="userSurveysChart"></canvas>
 						</div>						  
 					</div>
