--- a/web_flask/templates/surveys/survey_show.html
+++ b/web_flask/templates/surveys/survey_show.html
@@ -67,7 +67,7 @@
 			<div class="col-sm-6">
 				<div class="card">
 					<div class="card-body">
-						<div class="survey_statistic">
+						<div class="survey_statistic" style="height: 480px">
 							<canvas id="ScoreSurveyQuestionsChart"></canvas>
 						</div>
 					</div>
