--- a/web_flask/templates/categories/category_show.html
+++ b/web_flask/templates/categories/category_show.html
@@ -47,14 +47,16 @@
 		<h1></h1>
 
 		<div class="row mt-4">
-			<div class="col-sm-6">
+			<div class="col-sm-12">
 				<div class="card">
 					<div class="card-body">
 						<section class="infos_Category_Score"></section>
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-6">
+		</div>
+		<div class="row mt-4">
+			<div class="col-sm-12">
 				<div class="card">
 					<div class="card-body">
 						<div class="category_statistic">
