--- a/web_flask/templates/about.html
+++ b/web_flask/templates/about.html
@@ -34,15 +34,20 @@
 	{{ render_partial('shared/_header.html') }}
 
 	<div class="container pt-5">
-		<div class="row">
-			<h2>Where do we get our inspiration ?</h3>
-				<p></p>
+		<div class="row mb-5">
+			<h2 class="col-12">Where do we get our inspiration ?</h2>
+			<h4 class="col-12">The aim of this project was for us to apply our skills learned this years. we also wanted to take the opportunity to challenge ourselves as well.</h4>
 		</div>
-		<div class="row">
-			<h2>How is the development of Survey Storm organized ?</h3>
-				<p></p>
+		<div class="row mb-5">
+			<h2 class="col-12">How is the development of Survey Storm organized ?</h2>
+			<h4 class="col-12">From the start of the project, we had worked together to try to get to grips with the methods used in business, such as:
+      <ul class="mt-3">
+        <li>the Scrum vision</li>
+        <li>the Kanban method</li>
+      </ul>
+    </h4>
 		</div>
-		<div class="row">
+		<div class="row mb-5">
 			<h2 class="col-12 pl-0">Team</h3>
 				<div class="col-4 text-center mt-5">
 					<img class="rounded-circle mb-3" src="https://avatars.githubusercontent.com/u/77839963?v=4"
@@ -51,7 +56,7 @@
 			</h2>
 			<h4>PEBKAC Engineer</h4>
 			<ul class="list-inline">
-				<li class="list-inline-item"><a href="" target="_blank"><img class="LinkedIn"
+				<li class="list-inline-item"><a href="https://fr.linkedin.com/in/adrienmillot" target="_blank"><img class="LinkedIn"
 							src="static/images/294671_linkedin_icon.png" /></a></li>
 				<li class="list-inline-item"><a href="https://github.com/Sarolus" target="_blank"><img class="Github"
 							src="static/images/298818_logo_github_icon.png" /></a></li>
@@ -59,26 +64,28 @@
 		</div>
 		<div class="col-4 text-center mt-5">
 			<img class="rounded-circle mb-3"
-				src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+				src="https://avatars.githubusercontent.com/u/77833500?v=4"
 				alt="Generic placeholder image" width="140" height="140">
-			<h3>Simon BRARD</h2>
-				<ul class="list-inline">
-					<li class="list-inline-item"><a href="" target="_blank"><img class="LinkedIn"
-								src="static/images/294671_linkedin_icon.png" /></a></li>
-					<li class="list-inline-item"><a href="https://github.com/SimonBR017" target="_blank"><img
-								class="Github" src="static/images/298818_logo_github_icon.png" /></a></li>
-				</ul>
+			<h3>Simon BRARD</h3>
+      <h4>Hazardous genius</h4>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="https://fr.linkedin.com/in/simon-b-2a9820205/" target="_blank"><img class="LinkedIn"
+              src="static/images/294671_linkedin_icon.png" /></a></li>
+        <li class="list-inline-item"><a href="https://github.com/SimonBR017" target="_blank"><img
+              class="Github" src="static/images/298818_logo_github_icon.png" /></a></li>
+      </ul>
 		</div>
 		<div class="col-4 text-center mt-5">
 			<img class="rounded-circle mb-3" src="https://avatars.githubusercontent.com/u/12208362?v=4"
 				alt="Generic placeholder image" width="140" height="140">
-			<h3>Adrien MILLOT</h2>
-				<ul class="list-inline">
-					<li class="list-inline-item"><a href="" target="_blank"><img class="LinkedIn"
-								src="static/images/294671_linkedin_icon.png" /></a></li>
-					<li class="list-inline-item"><a href="https://github.com/adrienmillot" target="_blank"><img
-								class="Github" src="static/images/298818_logo_github_icon.png" /></a></li>
-				</ul>
+			<h3>Adrien MILLOT</h3>
+      <h4>Daredevil's tutor</h4>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="https://fr.linkedin.com/in/adrienmillot" target="_blank"><img class="LinkedIn"
+              src="static/images/294671_linkedin_icon.png" /></a></li>
+        <li class="list-inline-item"><a href="https://github.com/adrienmillot" target="_blank"><img
+              class="Github" src="static/images/298818_logo_github_icon.png" /></a></li>
+      </ul>
 		</div>
 	</div>
 	</div>
