--- a/web_flask/templates/homepage.html
+++ b/web_flask/templates/homepage.html
@@ -71,6 +71,20 @@
         </div>
       </div>
     </section>
+
+    <section class="mt-5 mb-5">
+      <div class="container">
+        <div class="row" style="height: 150px;">
+          <div class="col-5 text-right">
+            <h2>Everything is nothing without mobility.</h2>
+            <p></p>
+          </div>
+            <div class="col-7 text-center">
+              <img src="https://assets.stickpng.com/thumbs/58aefac1c869e092af51ee68.png" />
+            </div>
+        </div>
+      </div>
+    </section>
   </div>
 
   {{ render_partial('shared/_footer.html') }}
