--- a/web_flask/templates/answer.html
+++ b/web_flask/templates/answer.html
@@ -48,7 +48,7 @@
 			<div class="col-sm">
 				<div class="card shadow-sm mt-5 bg-light rounded">
 					<div class="card-body">
-						<h5 class="card-title" id="count">Question #1</h5>
+						<h5 class="card-title" id="count"></h5>
 						<p class="card-text" id="question_to_answer"></p>
 					</div>
 				</div>
