--- a/web_flask/templates/proposals/proposals_list.html
+++ b/web_flask/templates/proposals/proposals_list.html
@@ -50,7 +50,7 @@
 				<tr>
 					<th scope="col">#</th>
 					<th scope="col">Proposal's Label</th>
-					<th scope="col">Proposal's Id</th>
+					<!-- <th scope="col">Proposal's Id</th> -->
 					<th scope="col"></th>
 					<th scope="col">Watch Update Delete</th>
 				</tr>
