--- a/web_flask/templates/surveys/surveys_list.html
+++ b/web_flask/templates/surveys/surveys_list.html
@@ -45,12 +45,12 @@
 		<div class="row justify-content-lg-start">
 			<section class="alert_success_delete_survey"></section>
 		</div>
-		<table class="table table-hover table-dark">
+		<table class="table table-hover table-dark" >
 			<thead align="center">
 				<tr>
 					<th scope="col">#</th>
 					<th scope="col">Survey's Name</th>
-					<th scope="col">Survey's Id</th>
+					<!-- <th scope="col">Survey's Id</th> -->
 					<th scope="col">Watch Update Delete</th>
 				</tr>
 			</thead>
