fix listing user proposal categories

--- a/web_flask/templates/proposals/proposals_list.html
+++ b/web_flask/templates/proposals/proposals_list.html
@@ -51,7 +51,7 @@
 					<th scope="col">#</th>
 					<th scope="col">Proposal's Label</th>
 					<!-- <th scope="col">Proposal's Id</th> -->
-					<th scope="col"></th>
+					<!-- <th scope="col"></th> -->
 					<th scope="col">Watch Update Delete</th>
 				</tr>
 			</thead>
