--- a/web_flask/templates/categories/categories_list.html
+++ b/web_flask/templates/categories/categories_list.html
@@ -53,7 +53,7 @@
             <th scope="col">#</th>
             <th scope="col">Category's Name</th>
             <!-- <th scope="col">Category's Id</th> -->
-            <th scope="col"></th>
+            <!-- <th scope="col"></th> -->
             <th scope="col">Watch Update Delete</th>
           </tr>
         </thead>
